this is my second test commit for hello.html

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,14 @@
     <title>GitHub</title>
 </head>
 <body>
-    <h1>learning how to use git</h1>
+    <h1>learning how to use git</h1> 
+    <div>
+        <h2>most used command in git</h2>
+        <ol>
+            <li>git add hello.html</li>
+            <li>git commit </li>
+            <li>git status</li>
+        </ol>
+    </div>
 </body>
 </html>
