--- a/hello.html
+++ b/hello.html
@@ -12,9 +12,12 @@
         <h2>most used command in git</h2>
         <ol>
             <li>git add hello.html</li>
-            <li>git commit </li>
+            <li>git commit -m "description" </li>
             <li>git status</li>
         </ol>
+        <ul>
+            <li>try to understand the problem</li>
+        </ul>
     </div>
 </body>
 </html>
