added some lines

--- a/hello.html
+++ b/hello.html
@@ -13,6 +13,7 @@
         <ol>
             <li>git add hello.html</li>
             <li>git commit -m "description" </li>
+            <li>git commit -am "description"</li>
             <li>git status</li>
         </ol>
         <ul>
