--- a/hello.html
+++ b/hello.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body{
+            background-color: aliceblue;
+            padding: 10px;
+            margin: 10px;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub</title>
 </head>
 <body>
-    <h1>learning how to use git</h1> 
+    <h1>learning how to use git!</h1> 
     <div>
         <h2>most used command in git</h2>
         <ol>
