deleted exclamation in style branch

--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@
     <title>GitHub</title>
 </head>
 <body>
-    <h1>learning how to use git!</h1> 
+    <h1>learning how to use git</h1> 
     <div>
         <h2>most used command in git</h2>
         <ol>
